discussion/kv_engine/173472/173472_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Continue/Cancel RangeScan on an I/O task

Add RangeScanContinueTask (READER) which is a task to be scheduled
in response to scan continue or cancel requests.

For continue, the "scanning" occurs on the I/O task.
For cancel, the destruct (close of snapshot) occurs on the (same) I/O
task.

In this commit the task "model" is intentionally simple, 1 new task
created per continue or cancel. The focus of the commit is the
scan continue/cancel logic and a future commit will look to improve
the task model by limiting the tasks and/or limiting the concurrency.

Change-Id: I96daac2c6b81da145f21754e17c519de13cafc03

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-25 11:09:04.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-25 12:08:13.000000000
Message: 
Patch Set 12: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27138/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27138/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38292/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16939/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12: error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
    folly::Synchronized<ContinueState> continueState;
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16939/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:201:12:
error: no template named "Synchronized" in namespace "folly" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16939/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45579/ : FAILURE

Failure of GoogleTest "CollectionsCouchstore/CollectionsCouchstoreParameterizedTest.ConcCompactDocSizeIncreaseDropCollection_MB47460/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] CollectionsCouchstore/CollectionsCouchstoreParameterizedTest.ConcCompactDocSizeIncreaseDropCollection_MB47460/persistent_couchstore_full_eviction
..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_test.cc(1987): error: Expected equality of these values:
  0
  engine->getEpStats().compactionFailed
    Which is: 1
..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_test.cc(2176): error: Value of: droppedRead
  Actual: false
Expected: true
..\kv_engine\engines\ep\tests\module_tests\collections\evp_store_collections_test.cc(2177): error: Expected equality of these values:
  2
  droppedCollections.size()
    Which is: 0
[  FAILED  ] CollectionsCouchstore/CollectionsCouchstoreParameterizedTest.ConcCompactDocSizeIncreaseDropCollection_MB47460/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (18 ms)
CollectionsCouchstore/CollectionsCouchstoreParameterizedTest.ConcCompactDocSizeIncreaseDropCollection_MB47460/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45579/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18723/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
[2022-04-25T11:18:19.168Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T11:18:19.168Z] Expected equality of these values:
[2022-04-25T11:18:19.168Z]   100
[2022-04-25T11:18:19.168Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T11:18:19.168Z]     Which is: 95
[2022-04-25T11:18:19.168Z] vb:0 not fully resident after eviction
[2022-04-25T11:18:19.168Z] ../kv_engine/engines/ep/tests/module_tests/item_pager_test.cc:1225: Failure
[2022-04-25T11:18:19.168Z] Expected equality of these values:
[2022-04-25T11:18:19.168Z]   100
[2022-04-25T11:18:19.168Z]   getRRPercent(*store->getVBucket(vbid))
[2022-04-25T11:18:19.168Z]     Which is: 96
[2022-04-25T11:18:19.168Z] vb:1 not fully resident after eviction
[2022-04-25T11:18:19.168Z] [  FAILED  ] EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction, where GetParam() = "bucket_type=persistent:backend=couchstore:item_eviction_policy=full_eviction" (657 ms)
EphemeralOrPersistent/STItemPagerTest.ReplicaEvictedBeforeActive/persistent_couchstore_full_eviction
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18723/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19067/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19067/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15907/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6598/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17839/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19765/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
